# lin-rado-turing

./: Cargo.toml  README.md  programs.py
.circleci/: config.yml
.github/workflows/: ci.yml  wheels.yml
python/: Cargo.toml  setup.py
python/py_lin_rado_turing/tools/: __init__.py
python/src/: lib.rs
rust/: Cargo.toml
rust/src/: checks.rs  lib.rs  machine.rs  program.rs  tape.rs  types.rs
rust/tests/: test_machine_blanks.rs  test_machine_halt.rs  test_machine_quasihalt.rs  test_machine_recurrence.rs
src/: lib.rs  machine.rs  parse.rs  program.rs  tape.rs  types.rs
tests/: test_machine_blanks.rs  test_machine_halt.rs  test_machine_quasihalt.rs  test_machine_recurrence.rs
