[package]
name = "lin-rado-turing"
version = "0.1.0"
authors = ["Boyd Johnson <johnson.boyd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
itertools = "0.8"

[features]
slow-tests = []

[profile.release]
codegen-units = 1
lto = true
